# software_robocon_2025

./: README.md  linearRegressionData.py  mapping_dualsense_jetson.txt
Full robot calculation/: README.md  belt_velocity.py  camera_angle_calc.py  constants.py  court_visualization.py  main.py  parameter_optimization.py  physics.py  trajectory_visualization.py  ui_components.py
gamepad_interface/: CMakeLists.txt
gamepad_interface/include/gamepad_interface/: mapper.hpp
gamepad_interface/src/: gamepad.cpp  gamepad_node.cpp  mapper.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/astra_camera_msgs/share/ament_index/resource_index/parent_prefix_path/: astra_camera_msgs
install/astra_camera_msgs/share/astra_camera_msgs/: local_setup.sh  package.sh
install/gamepad_interface/include/gamepad_interface/: gamepad.hpp  mapper.hpp
install/gamepad_interface/lib/gamepad_interface/: gamepad_node
install/gamepad_interface/share/ament_index/resource_index/package_run_dependencies/: gamepad_interface
install/gamepad_interface/share/gamepad_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gamepad_interface/share/gamepad_interface/cmake/: gamepad_interfaceConfig.cmake
install/main_controller_pkg/lib/main_controller_pkg/: full_calculation_node  main_controller_node
install/main_controller_pkg/share/main_controller_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mcu_interface/share/mcu_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mcu_interface/share/mcu_interface/cmake/: mcu_interfaceConfig.cmake
install/odrive_interface/include/odrive_interface/: can_comm.hpp
install/odrive_interface/lib/odrive_interface/: odrive_interface_node
install/odrive_interface/share/ament_index/resource_index/package_run_dependencies/: odrive_interface
install/odrive_interface/share/ament_index/resource_index/parent_prefix_path/: odrive_interface
install/odrive_interface/share/odrive_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_bringup/share/robot_bringup/: package.sh  package.xml
install/robot_interfaces/include/robot_interfaces/robot_interfaces/msg/: base_cmd.hpp  imu.hpp
install/robot_interfaces/include/robot_interfaces/robot_interfaces/msg/detail/: base_cmd__functions.c  base_cmd__functions.h  base_cmd__rosidl_typesupport_fastrtps_c.h  base_cmd__rosidl_typesupport_introspection_cpp.hpp  base_cmd__struct.h  base_cmd__struct.hpp  base_cmd__traits.hpp  base_cmd__type_support.c  base_cmd__type_support.cpp  base_cmd__type_support.h  base_cmd__type_support.hpp  imu__builder.hpp  imu__functions.h  imu__rosidl_typesupport_fastrtps_cpp.hpp  imu__rosidl_typesupport_introspection_cpp.hpp  imu__struct.h  imu__type_support.c  imu__type_support.cpp  imu__type_support.h  imu__type_support.hpp
install/robot_interfaces/include/robot_interfaces/robot_interfaces/srv/: base_control.h  control.hpp  request_action.h  request_calculation.h  request_calculation.hpp  request_mcu.hpp  request_odrive.h  request_odrive.hpp  rotate_base.h
install/robot_interfaces/include/robot_interfaces/robot_interfaces/srv/detail/: base_control__builder.hpp  base_control__rosidl_typesupport_introspection_cpp.hpp  base_control__struct.h  base_control__struct.hpp  base_control__type_support.cpp  base_control__type_support.h  base_control__type_support.hpp  control__functions.c  control__rosidl_typesupport_fastrtps_c.h  control__rosidl_typesupport_introspection_cpp.hpp  control__traits.hpp  control__type_support.cpp  control__type_support.h  control__type_support.hpp  push_ball__builder.hpp  push_ball__functions.c  push_ball__rosidl_typesupport_introspection_c.h  push_ball__rosidl_typesupport_introspection_cpp.hpp  push_ball__struct.h  push_ball__struct.hpp  push_ball__traits.hpp  push_ball__type_support.cpp  push_ball__type_support.h  push_ball__type_support.hpp  request_action__rosidl_typesupport_fastrtps_c.h  request_action__rosidl_typesupport_fastrtps_cpp.hpp  request_action__struct.h  request_action__traits.hpp  (+35 more)
install/robot_interfaces/lib/robot_interfaces/: uart_node
install/robot_interfaces/share/ament_index/resource_index/rosidl_interfaces/: robot_interfaces
install/robot_interfaces/share/robot_interfaces/: package.sh
install/robot_interfaces/share/robot_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_robot_interfaces__rosidl_generator_cExport.cmake  export_robot_interfaces__rosidl_generator_pyExport.cmake  robot_interfaces__rosidl_typesupport_cppExport.cmake  robot_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/robot_interfaces/share/robot_interfaces/msg/: BaseCmd.idl  IMU.idl
install/robot_interfaces/share/robot_interfaces/srv/: BaseControl.idl  Control.srv  PushBall.idl  PushBall_Request.msg  RequestAction.idl  RequestOdrive.idl  RotateBase.idl
log/: latest_build
main_controller_pkg/: setup.cfg  setup.py
main_controller_pkg/main_controller_pkg/: full_calculation_node.py  main_controller_node.py
mcu_interface/: CMakeLists.txt
mcu_interface/include/mcu_interface/: MCU_Interface.hpp
mcu_interface/src/: MCU_Interface.cpp
odrive_interface/: CMakeLists.txt  package.xml
odrive_interface/include/odrive_interface/: odrive_motor.hpp
odrive_interface/src/: can_comm.cpp  odrive_interface.cpp  odrive_motor.cpp
robot_bringup/launch/: complete_robot.launch.py
robot_interfaces/: CMakeLists.txt
robot_interfaces/include/robot_interfaces/: MCU_Interface.hpp
robot_interfaces/msg/: BaseCMD.msg
robot_interfaces/src/: MCU_Interface.cpp
ros2_astra_camera/astra_camera/launch/: astro_pro_plus.launch.xml
ros2_astra_camera/astra_camera/src/: ob_camera_node.cpp
shooter_control/: CMakeLists.txt  package.xml
shooter_control/src/: can_comm.hpp  odrive_motor.cpp  shooter.cpp  shooter_auto.cpp  shooter_manual.cpp
(+14 files in other folders)
